fix: add google signin user to group
