# apps/backend/user-service/src/routes/v1/routes.ts
@@ -20,6 +20,8 @@ const models: TsoaRoute.Models = {
             "facebookSub": {"dataType":"string"},
             "username": {"dataType":"string"},
             "email": {"dataType":"string"},
+            "phone_number": {"dataType":"string"},
+            "profile": {"dataType":"string"},
             "gender": {"dataType":"string"},
             "age": {"dataType":"double"},
             "createdAt": {"dataType":"datetime"},
@@ -75,6 +77,7 @@ const models: TsoaRoute.Models = {
             "facebookSub": {"dataType":"string"},
             "email": {"dataType":"string"},
             "phone_number": {"dataType":"string"},
+            "profile": {"dataType":"string"},
             "username": {"dataType":"string","required":true},
         },
         "additionalProperties": false,
@@ -87,6 +90,7 @@ const models: TsoaRoute.Models = {
             "googleSub": {"dataType":"string"},
             "facebookSub": {"dataType":"string"},
             "username": {"dataType":"string"},
+            "profile": {"dataType":"string"},
             "gender": {"dataType":"string"},
             "age": {"dataType":"double"},
         },
