# apps/backend/user-service/src/schemas/user.schema.ts
@@ -5,7 +5,9 @@ const userJoiSchema = Joi.object({
   googleSub: Joi.string(),
   facebookSub: Joi.string(),
   username: Joi.string().required(), // Username is a required string
-  email: Joi.string().email().required(), // Email is a required string and must be a valid email
-});
+  email: Joi.string().email(), // Email must be a valid email if provided
+  profile: Joi.string(),
+  phone_number: Joi.string(),
+}).xor('email', 'phone_number'); // Either email or phone_number must be present
 
 export default userJoiSchema;
